...
            }
        }) {
            Image(systemName: "person")
                .font(.title)
                .foregroundStyle(AppColors.mainColor)
        }
        .accessibilityIdentifier("userPreferencesButton")
    }
}

